RZA / Improve update doc.